modified top bar styles, hopefully fixed lion scrollbar issue

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -1,3 +1,12 @@
+/**
+@TODO remove osx lion scrollbars when using trackpad
+*/
+
+*::-webkit-scrollbar {
+    -webkit-appearance: none;
+}
+
+
 /* * * Variables * * */
 .bs-container {
 /* Colors */
@@ -374,7 +383,7 @@ font-family: Arial, sans-serif;
 	
 	.bs-tab_content_container {
 		position:absolute;
-		top:36px;
+		top:44px;
 		bottom:0;
 		left:0;
 		right:0;
@@ -383,6 +392,7 @@ font-family: Arial, sans-serif;
 	.bs-tab_well {
 		border-bottom:2px solid #6e6e6e;
 		height:34px;
+        margin-top:8px;
 	}
 	
 	.bs-tab_button {
@@ -560,12 +570,13 @@ font-family: Arial, sans-serif;
 
 #bs-topRow {
 	height:60px;
-	border-bottom:1px solid #a1a1a1;
-	background:#fafafa;
+	/*border-bottom:1px solid #a1a1a1;*/
+    .box-shadow(0, 1px, 2px, rgba(0,0,0,.24));
+	background:#ebebeb;
 }
 
 #bs-bottomRow {
-	top:70px;
+	top:60px;
 	/*.absolute(70px,0,0,0);*/
 }
 }
